--- a/src/Web/App_Plugins/PurgeCdn/views/purgecdn.html
+++ b/src/Web/App_Plugins/PurgeCdn/views/purgecdn.html
@@ -1,11 +1,1 @@
-﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<div><h2>Hey</h2></div>
